// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project - Add Data - Filter Section should display the given title in the header 1`] = `
<pf-filter-section
  filter={[Function Object]}
  reset={[Function EventEmitter]}
>
  <div
    class="filter"
  >
    <div
      class="header"
    >
       Job Title/Code 
      <div
        class="header-right"
      >
        
        <div
          class="reset-link"
        >
          
          
          
          Clear
        </div>
        
        
        <div>
          <i
            class="far fa-angle-up"
          />
        </div>
      </div>
    </div>
    
    <div />
  </div>
</pf-filter-section>
`;

exports[`Project - Add Data - Filter Section should display the transcluded content 1`] = `
<ng-component
  filter={[Function Object]}
>
  <pf-filter-section
    ng-reflect-filter="[object Object]"
  >
    <div
      class="filter"
    >
      <div
        class="header"
      >
         Job Title/Code 
        <div
          class="header-right"
        >
          
          <div
            class="reset-link"
          >
            
            
            
            Clear
          </div>
          
          
          <div>
            <i
              class="far fa-angle-up"
            />
          </div>
        </div>
      </div>
      
      <div>
        <h1>
          Transclusion Works!
        </h1>
      </div>
    </div>
  </pf-filter-section>
</ng-component>
`;

exports[`Project - Add Data - Filter Section should show a fa-angle-down icon in the header, when collapsed 1`] = `
<pf-filter-section
  collapsed={[Function Boolean]}
  filter={[Function Object]}
  reset={[Function EventEmitter]}
>
  <div
    class="filter"
  >
    <div
      class="header"
    >
       Job Title/Code 
      <div
        class="header-right"
      >
        
        <div
          class="reset-link"
        >
          
          
          
          Clear
        </div>
        
        <div>
          <i
            class="far fa-angle-down"
          />
        </div>
        
      </div>
    </div>
    
  </div>
</pf-filter-section>
`;

exports[`Project - Add Data - Filter Section should show a fa-angle-up icon in the header, when NOT collapsed 1`] = `
<pf-filter-section
  collapsed="false"
  filter={[Function Object]}
  reset={[Function EventEmitter]}
>
  <div
    class="filter"
  >
    <div
      class="header"
    >
       Job Title/Code 
      <div
        class="header-right"
      >
        
        <div
          class="reset-link"
        >
          
          
          
          Clear
        </div>
        
        
        <div>
          <i
            class="far fa-angle-up"
          />
        </div>
      </div>
    </div>
    
    <div />
  </div>
</pf-filter-section>
`;
